--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
-  <title>My Resume</title>
+  <title>Kayan Williams Resume</title>
 
   <link rel="stylesheet" href="css/index.css">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -14,6 +17,108 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <header>
+    <!-- Page Wrapper -->
+    <div id="page-wrapper">
+
+      <!-- Navigation -->
+      <div class="container">
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Protfolio</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+
+
+        <!-- Page name -->
+
+        <div id="page-name">
+          <div class="inner">
+            <img class="image" src="img/web.jpg" alt="Web development" />
+            <h1>Kayan Williams</h1>
+            <p>I am a fullstack web developer who loves technology and creative problem solving.</p>
+            <p>My passion for Web Development is fueled by that fact that I am constantly learning. This is not a
+              career
+              that's stagnant but forever evolving.</p>
+
+          </div>
+        </div>
+      </div>
+  </header>
+
+  <section class="main">
+    <!-- Objective -->
+    <div class="spotlight">
+      <div class="inner">
+        <h2>Career Objective</h2>
+        <p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet
+          turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
+          dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex null..</p>
+        <p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet
+          turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
+          dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex null.</p>
+        <p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet
+          turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
+          dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex null.</p>
+      </div>
+    </div>
+
+
+    </div>
+
+    <!-- Stack -->
+    <div class="spotlight2">
+      <div class="inner2">
+        <h2>Tech Stack</h2>
+        <ul class="stack">
+          <li class="st">HTML </li>
+          <li class="st">CSS </li>
+          <i class="js">JAVASCRIPT</i>
+          <li class="st">REACT </li>
+          <li class="st">PYTHON </i></li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <!-- Work hisory -->
+  <section class="Work">
+
+    <div class="inner">
+
+      <table id="jobs">
+        <th>Company</th>
+        <th>Title</th>
+        <th>Tech</th>
+        </tr>
+        <tr>
+          <td>Dell</td>
+          <td>UX Design</td>
+          <td>Photoshop</td>
+        </tr>
+        <tr>
+          <td>Hertz</td>
+          <td>Front-End Developer</td>
+          <td>JavaScript</td>
+        </tr>
+        <tr>
+          <td>Uber</td>
+          <td>Back-End Developer</td>
+          <td>Node.JS</td>
+        </tr>
+      </table>
+    </div>
+  </section>
+
+  <Footer>
+    <p>Kayan Willians Development</p>
+  </Footer>
+
+  </div>
+
 </body>
+
 </html>
