--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
               career
               that's stagnant but forever evolving.</p>
 
+              <button><a href="#">Lets Team Up</a></button>
           </div>
         </div>
       </div>
@@ -114,7 +115,7 @@
   </section>
 
   <Footer>
-    <p>Kayan Willians Development</p>
+    <p> &copy; Kayan Willians Development 2020</p>
   </Footer>
 
   </div>
